# docs/swagger-output.json
@@ -39,7 +39,40 @@
         ],
         "summary": "Endpoint for save IP address for admins.",
         "description": "Endpoint for save IP address for admins.",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "ip,desc,TTL",
+            "in": "body",
+            "description": {
+              "$ip": "IP address",
+              "$desc": "Description for IP address",
+              "$TTL": "TTL (Time-to-Live) value for IP address in days"
+            },
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "ip": {
+                  "type": "string",
+                  "example": "192.168.0.1"
+                },
+                "desc": {
+                  "type": "string",
+                  "example": "Some description"
+                },
+                "TTL": {
+                  "type": "number",
+                  "example": 1
+                }
+              },
+              "required": [
+                "ip",
+                "desc",
+                "TTL"
+              ]
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -85,7 +118,34 @@
         ],
         "summary": "Endpoint for provide next free IP address.",
         "description": "Endpoint for provide next free IP address.",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "desc,amount",
+            "in": "body",
+            "description": {
+              "$desc": "Description for IP address",
+              "$amount": "Amount of ip addresses needed"
+            },
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "desc": {
+                  "type": "string",
+                  "example": "Some description"
+                },
+                "amount": {
+                  "type": "number",
+                  "example": 1
+                }
+              },
+              "required": [
+                "desc",
+                "amount"
+              ]
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -138,6 +198,32 @@
             "required": true,
             "schema": {
               "type": "string"
+            }
+          },
+          {
+            "name": "desc,TTL",
+            "in": "body",
+            "description": {
+              "$desc": "Description for IP address",
+              "$TTL": "TTL (Time-to-Live) value for IP address in days"
+            },
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "desc": {
+                  "type": "string",
+                  "example": "Some description"
+                },
+                "TTL": {
+                  "type": "number",
+                  "example": 1
+                }
+              },
+              "required": [
+                "desc",
+                "TTL"
+              ]
             }
           }
         ],
@@ -251,6 +337,31 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "desc,ip",
+            "in": "body",
+            "description": {
+              "$desc": "New description for IP address",
+              "$ip": "IP address what you want edit"
+            },
+            "schema": {
+              "type": "object",
+              "properties": {
+                "desc": {
+                  "type": "string",
+                  "example": "Some new description"
+                },
+                "ip": {
+                  "type": "string",
+                  "example": "192.168.0.2"
+                }
+              },
+              "required": [
+                "desc",
+                "ip"
+              ]
+            }
           }
         ],
         "responses": {
@@ -292,7 +403,45 @@
         ],
         "summary": "Endpoint for create a new user",
         "description": "Endpoint for create a new user",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "email,name,password,group",
+            "in": "body",
+            "required": {
+              "$email": "true",
+              "$name": "true",
+              "$password": "true"
+            },
+            "description": {
+              "$email": "Email for user",
+              "$name": "Name for user",
+              "$password": "Password for user",
+              "$group": "Group for user"
+            },
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "example": "joh.doe@email.com"
+                },
+                "name": {
+                  "type": "string",
+                  "example": "John Doe"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "12345678"
+                }
+              },
+              "required": [
+                "email",
+                "name",
+                "password"
+              ]
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -545,7 +694,51 @@
         ],
         "summary": "Endpoint for make a new network",
         "description": "Endpoint for make a new network",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "networkName,hostMin,hostMax,hostNetwork,networkActive",
+            "in": "body",
+            "description": {
+              "$networkName": "Name for network",
+              "$hostMin": "Min IP address for range of hosted IP address",
+              "$hostMax": "Max IP address for range of hosted IP address",
+              "$hostNetwork": "Subnet for host network without / mark",
+              "$networkActive": "True or false if this netwoork is active"
+            },
+            "schema": {
+              "type": "object",
+              "properties": {
+                "networkName": {
+                  "type": "string",
+                  "example": "SomeNetwork"
+                },
+                "hostMin": {
+                  "type": "string",
+                  "example": "192.168.0.100"
+                },
+                "hostMax": {
+                  "type": "string",
+                  "example": "192.168.0.200"
+                },
+                "hostNetwork": {
+                  "type": "number",
+                  "example": 24
+                },
+                "networkActive": {
+                  "type": "boolean",
+                  "example": true
+                }
+              },
+              "required": [
+                "networkName",
+                "hostMin",
+                "hostMax",
+                "hostNetwork",
+                "networkActive"
+              ]
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
